crates/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__overlaps.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "line_type": "header",
      "header": {
        "type": "utf8"
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "begin"
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "languages",
        "codes": [
          "eng"
        ]
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "participants",
        "entries": [
          {
            "speaker_code": "SPK",
            "name": null,
            "role": "Speaker"
          },
          {
            "speaker_code": "LSN",
            "name": null,
            "role": "Adult"
          }
        ]
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "options",
        "options": [
          "CA"
        ]
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "id",
        "language": [
          "eng"
        ],
        "corpus": "corpus",
        "speaker": "SPK",
        "role": "Speaker"
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "id",
        "language": [
          "eng"
        ],
        "corpus": "corpus",
        "speaker": "LSN",
        "role": "Adult"
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "comment",
        "content": {
          "segments": [
            {
              "type": "text",
              "text": "CA overlap points and indexed overlaps"
            }
          ]
        }
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "comment",
        "content": {
          "segments": [
            {
              "type": "text",
              "text": "Constructs: overlap_point (top/bottom brackets), indexed overlaps"
            }
          ]
        }
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "speaker": "SPK",
        "content": {
          "content": [
            {
              "type": "overlap_point",
              "marker": "top_overlap_begin"
            },
            {
              "type": "word",
              "raw_text": "one",
              "cleaned_text": "one",
              "content": [
                {
                  "type": "text",
                  "content": "one"
                }
              ]
            },
            {
              "type": "overlap_point",
              "marker": "top_overlap_end"
            },
            {
              "type": "overlap_point",
              "marker": "top_overlap_begin",
              "index": 2
            },
            {
              "type": "word",
              "raw_text": "two",
              "cleaned_text": "two",
              "content": [
                {
                  "type": "text",
                  "content": "two"
                }
              ]
            },
            {
              "type": "overlap_point",
              "marker": "top_overlap_end",
              "index": 2
            }
          ],
          "terminator": {
            "type": "period"
          }
        }
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "speaker": "LSN",
        "content": {
          "content": [
            {
              "type": "overlap_point",
              "marker": "bottom_overlap_begin"
            },
            {
              "type": "word",
              "raw_text": "one",
              "cleaned_text": "one",
              "content": [
                {
                  "type": "text",
                  "content": "one"
                }
              ]
            },
            {
              "type": "overlap_point",
              "marker": "bottom_overlap_end"
            }
          ],
          "terminator": {
            "type": "period"
          }
        }
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "speaker": "LSN",
        "content": {
          "content": [
            {
              "type": "overlap_point",
              "marker": "bottom_overlap_begin",
              "index": 2
            },
            {
              "type": "word",
              "raw_text": "two",
              "cleaned_text": "two",
              "content": [
                {
                  "type": "text",
                  "content": "two"
                }
              ]
            },
            {
              "type": "overlap_point",
              "marker": "bottom_overlap_end",
              "index": 2
            }
          ],
          "terminator": {
            "type": "period"
          }
        }
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "speaker": "SPK",
        "content": {
          "content": [
            {
              "type": "overlap_point",
              "marker": "top_overlap_begin"
            },
            {
              "type": "word",
              "raw_text": "a",
              "cleaned_text": "a",
              "content": [
                {
                  "type": "text",
                  "content": "a"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "b⌉",
              "cleaned_text": "b",
              "content": [
                {
                  "type": "text",
                  "content": "b"
                },
                {
                  "type": "overlappoint",
                  "content": {
                    "marker": "top_overlap_end"
                  }
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "c",
              "cleaned_text": "c",
              "content": [
                {
                  "type": "text",
                  "content": "c"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "d",
              "cleaned_text": "d",
              "content": [
                {
                  "type": "text",
                  "content": "d"
                }
              ]
            }
          ],
          "terminator": {
            "type": "period"
          }
        }
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "speaker": "LSN",
        "content": {
          "content": [
            {
              "type": "word",
              "raw_text": "e",
              "cleaned_text": "e",
              "content": [
                {
                  "type": "text",
                  "content": "e"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "f",
              "cleaned_text": "f",
              "content": [
                {
                  "type": "text",
                  "content": "f"
                }
              ]
            },
            {
              "type": "overlap_point",
              "marker": "bottom_overlap_begin"
            },
            {
              "type": "word",
              "raw_text": "g",
              "cleaned_text": "g",
              "content": [
                {
                  "type": "text",
                  "content": "g"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "h⌋",
              "cleaned_text": "h",
              "content": [
                {
                  "type": "text",
                  "content": "h"
                },
                {
                  "type": "overlappoint",
                  "content": {
                    "marker": "bottom_overlap_end"
                  }
                }
              ]
            }
          ],
          "terminator": {
            "type": "period"
          }
        }
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "end"
      }
    }
  ],
  "participants": {
    "SPK": {
      "code": "SPK",
      "name": null,
      "role": "Speaker",
      "id": {
        "language": [
          "eng"
        ],
        "corpus": "corpus",
        "speaker": "SPK",
        "role": "Speaker"
      },
      "birth_date": null
    },
    "LSN": {
      "code": "LSN",
      "name": null,
      "role": "Adult",
      "id": {
        "language": [
          "eng"
        ],
        "corpus": "corpus",
        "speaker": "LSN",
        "role": "Adult"
      },
      "birth_date": null
    }
  },
  "languages": [
    "eng"
  ],
  "options": [
    "CA"
  ]
}
